--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Svm-legion</title>
+    <title>DPSVM-LEGION</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/thesiddharth/svm-legion">View on GitHub</a>
 
-          <h1 id="project_title">Svm-legion</h1>
+          <h1 id="project_title">DPSVM-LEGION</h1>
           <h2 id="project_tagline">A distributed implementation of Support Vector Machines using Legion</h2>
 
             <section id="downloads">
@@ -32,48 +32,382 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p dir="ltr">
+	We are going to implement a parallel Support Vector Machine algorithm for binary classification using the Legion parallel programming system. This would be
+	achieved by parallelizing the modified Sequential Minimal Optimization algorithm used by popular tools like LIBSVM, for distributed heterogeneous
+	architectures.
+</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="background" class="anchor" href="#background" aria-hidden="true"><span class="octicon octicon-link"></span></a>Background</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p dir="ltr">
+	Support Vector Machines (SVMs) is a widely used supervised machine learning algorithm, which is essentially a discriminative classifier used for linear and
+	nonlinear classification tasks. The training of an SVM is a Quadratic Programming (QP) optimization problem, where the primal is converted to its dual
+	form. Platt originally proposed the SMO technique for solving the dual QP problem, by breaking it down to a series of smallest possible QP problems.
+</p>
+
+<p dir="ltr">
+	The SMO technique iteratively solves for a target function, by updating the Lagrangian multipliers and the error terms over the entire training dataset.
+	Each update step involves the computation of the modified inner products of two training data input vectors (the kernel trick), which is computationally
+	intensive over the set of all training data. We aim to implement a parallel SMO algorithm which distributes the task of training over different nodes as
+	proposed by Cao et. al. <sup>[1]</sup>, and extend it to multiple GPU devices based on Herrero-Lopez et. al.'s <sup>[2]</sup> methodology.
+</p>
+<p dir="ltr">
+	The parallel calculation of error terms and updates of the Lagrangian multipliers will ideally scale almost linearly with the number of sub processes, and
+	allow for the use of parallel reduction with low communication overheads for global constants. We are using Legion to create a portable implementation that
+	leverages distributed environments, while creating a high-performance mapping interface specifically targeted at the latedays cluster.
+</p>
+<br/>
+<p dir="ltr" class="centeredImage">
+	<img
+	src="https://docs.google.com/drawings/d/snCt9Ikc2FKevO3udDLoy0g/image?w=556&amp;h=401&amp;rev=509&amp;ac=1" width="556px;" height="401px;"/>
+</p>
+<br/>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a id="challenge" class="anchor" href="#challenge" aria-hidden="true"><span class="octicon octicon-link"></span></a>Challenge</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p dir="ltr">
+	The aspect of the problem that is most challenging is creating Legion tasks and regions that parallelize the kernel computations in a way that minimizes
+	communication overheads between:
+</p>
+<ol>
+	<li dir="ltr">
+		<p dir="ltr">
+			Nodes in the cluster
+		</p>
+	</li>
+	<li dir="ltr">
+		<p dir="ltr">
+			GPU and CPU
+		</p>
+	</li>
+</ol>
+<p dir="ltr">
+	This is exacerbated by the fact that our team is completely new to the Legion language, and has only a basic understanding of SVM theory and the SMO
+	algorithm.
+</p>
+
+<p dir="ltr">
+	For a single GPU implementation of a parallel SVM algorithm, <sup>[2]</sup> profiles time spent on communication versus computation on various training datasets. The
+	following trends were noted:
+</p>
+<ol>
+	<li dir="ltr">
+		<p dir="ltr">
+			Datasets with a large number of features per sample and a large number of samples spent most of the GPU time on computation (the kernel
+			computation, which is a SGEMV matrix operation).
+		</p>
+	</li>
+	<li dir="ltr">
+		<p dir="ltr">
+			Datasets with a relatively smaller number of features and samples were seen to spend up to 33% of GPU time on communication, during reductions and
+			updates across GPU tasks.
+		</p>
+	</li>
+</ol>
+<p dir="ltr">
+	Since we are are shifting this to a distributed environment, we would expect to see the communication-to-computation overhead increase. However, there
+	exist even more complex datasets <sup>[3]</sup> that we expect to exhibit low ratios in our distributed environment as well.
+</p>
+
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="resources" class="anchor" href="#resources" aria-hidden="true"><span class="octicon octicon-link"></span></a>Resources</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p dir="ltr">
+	We will be using the latedays cluster for running the system, using Legion to port the implementation across different nodes. We hope to leverage
+	parallelism primarily across the GPU devices in the cluster.
+</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p dir="ltr">
+	We are building upon the pseudo code provided for the parallel SMO algorithm, which uses OpenMPI to distribute computation across nodes by Cao et. al.<sup>[1]</sup>
+	And we aim to start with the basic division of work across GPUs as described by Herrero-Lopez et. al.<sup>[2]</sup> in their implementation.
+</p>    
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+  <h3>
+<a id="goals" class="anchor" href="#goals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goals and Deliverables</h3>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Svm-legion maintained by <a href="https://github.com/thesiddharth">thesiddharth</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+<p dir="ltr">
+	Plan to achieve:
+</p>
 
-    
+<ul>
+	<li dir="ltr">
+		<p dir="ltr">
+			A Legion-based, distributed, parallel SVM implementation.
+		</p>
+	</li>
+	<li dir="ltr">
+		<p dir="ltr">
+			Benchmark this implementation against the standard LibSVM implementation.
+		</p>
+	</li>
+	<li dir="ltr">
+		<p dir="ltr">
+			Achieve the following training speedups over LibSVM (expected):
+		</p>
+	</li>
+</ul>
 
-  </body>
+<div dir="ltr">
+	<table class="my_table">
+		<colgroup>
+			<col width="143"/>
+			<col width="141"/>
+			<col width="113"/>
+			<col width="101"/>
+			<col width="*"/>
+		</colgroup>
+		<tbody>
+			<tr>
+				<td class="setup_column">
+					<strong> <p> Setup vs. Dataset </p> </strong>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						Adult
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						Web
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						Mnist (Even vs Odd)
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						Covertype
+					</p>
+				</td>
+			</tr>
+			<tr>
+				<td class="setup_column">
+					<p dir="ltr">
+						Speedup achieved using single Tesla C1060
+						<sup>[2]</sup>
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						10.45x
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						14.97x
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						32.79x
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						-
+					</p>
+				</td>
+			</tr>
+			<tr>
+				<td class="setup_column">
+					<p dir="ltr">
+						Speedup achieved using chunking algorithm and threeTesla C1060s and one Intel Xeon E5426 2.8GHz	quad-core CPU. <sup>[3]</sup>
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						19.38x
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						42.89x
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						129.64x
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						Too large for LibSVM,
+					</p>
+					<p dir="ltr">
+						Runtime: 651s
+					</p>
+				</td>
+			</tr>
+			<tr>
+				<td class="setup_column">
+					<p dir="ltr">
+						Speedup expected in our implementation on latedays (which has 1 Tesla K40 on each machine)
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						~10x (High communication-to-computation overhead)
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						~35x
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						~120x
+					</p>
+				</td>
+				<td class="info_column">
+					<p dir="ltr">
+						&lt; 600s
+					</p>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+
+<p dir="ltr">
+	Hope to achieve:
+</p>
+
+<ul>
+	<li dir="ltr">
+		<p dir="ltr">
+			Profiling against Spark LIBLINEAR or MPI LIBLINEAR <sup>[4]</sup>
+		</p>
+	</li>
+	<li dir="ltr">
+		<p dir="ltr">
+			Profiling for multi-class datasets.
+		</p>
+	</li>
+</ul>
+
+  <h3>
+<a id="goals" class="anchor" href="#goals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Goals and Deliverables</h3>
+
+<p dir="ltr">
+	We plan to use Legion and the latedays cluster. As mentioned above, this would allow us to create a portable implementation of our distributed SVM along
+	with a high-performance mapping interface specifically targeted at the latedays.
+</p>
+
+  <h3>
+<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>Schedule</h3>
+
+<div dir="ltr">
+	<table class="my_table">
+		<colgroup>
+			<col width="92"/>
+			<col width="532"/>
+		</colgroup>
+		<tbody>
+			<tr>
+				<td>
+					<p dir="ltr">
+						Dates
+					</p>
+				</td>
+				<td>
+					<p dir="ltr">
+						Planned Goals
+					</p>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<p dir="ltr">
+						4/3 - 4/10
+					</p>
+				</td>
+				<td>
+					<p dir="ltr">
+						Understanding Legion paradigms and setting up GASNet on latedays. Legion "Hello, World!" on latedays. Review of existing literature on
+						Parallel SVMs.
+					</p>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<p dir="ltr">
+						4/11 - 4/16
+					</p>
+				</td>
+				<td>
+					<p dir="ltr">
+						Complete Unoptimized correctness of implementation
+					</p>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<p dir="ltr">
+						4/17 - 4/24
+					</p>
+				</td>
+				<td>
+					<p dir="ltr">
+						Complete Optimized implementation
+					</p>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<p dir="ltr">
+						4/25 - 5/2
+					</p>
+				</td>
+				<td>
+					<p dir="ltr">
+						Benchmark against LIBSVM and profiling (Exams week)
+					</p>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<p dir="ltr">
+						5/3 - 5/11
+					</p>
+				</td>
+				<td>
+					<p dir="ltr">
+						Stretch goals, Presentation and Write up (Finals Week)
+					</p>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+
+  <h3>
+<a id="bibliography" class="anchor" href="#bibliography" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bibliography</h3>
+
+<p dir="ltr">
+	<sup>[1]</sup> Cao, Li Juan, et al. "Parallel sequential minimal optimization for the training of support vector machines." Neural Networks, IEEE Transactions on 17.4
+	(2006): 1039-1049.
+</p>
+<p dir="ltr">
+	<sup>[2]</sup> Herrero-Lopez, Sergio, John R. Williams, and Abel Sanchez. "Parallel multiclass classification using SVMs on GPUs." Proceedings of the 3rd Workshop on
+	General-Purpose Computation on Graphics Processing Units. ACM, 2010.
+</p>
+<p dir="ltr">
+	<sup>[3]</sup> Li, Qi, et al. "Parallel multitask cross validation for Support Vector Machine using GPU." Journal of Parallel and Distributed Computing 73.3 (2013):
+	293-302.
+</p>
+<p dir="ltr">
+	<sup>[4]</sup> http://www.csie.ntu.edu.tw/~cjlin/libsvmtools/distributed-liblinear/
+</p>
+
+
+</body>
 </html>
