Add image of workflow and correct typos.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <br/>
 <p dir="ltr" class="centeredImage">
 	<img
-	src="https://docs.google.com/drawings/d/snCt9Ikc2FKevO3udDLoy0g/image?w=556&amp;h=401&amp;rev=509&amp;ac=1" width="556px;" height="401px;"/>
+	src="images/workflow.png" width="556px;" height="401px;"/>
 </p>
 <br/>
 
@@ -332,7 +332,7 @@
 				</td>
 				<td>
 					<p dir="ltr">
-						Understanding Legion paradigms and setting up GASNet on latedays. Legion "Hello, World!" on latedays. Review of existing literature on
+						Understanding Legion paradigms and setting up GASNet on latedays. Legion "Hello, World!" on latedays. Review existing literature on
 						Parallel SVMs.
 					</p>
 				</td>
@@ -345,7 +345,7 @@
 				</td>
 				<td>
 					<p dir="ltr">
-						Complete Unoptimized correctness of implementation
+						Get a correct, unoptimized implementation up and running.
 					</p>
 				</td>
 			</tr>
@@ -357,7 +357,7 @@
 				</td>
 				<td>
 					<p dir="ltr">
-						Complete Optimized implementation
+						Optimize implementation for performance.
 					</p>
 				</td>
 			</tr>
@@ -369,7 +369,7 @@
 				</td>
 				<td>
 					<p dir="ltr">
-						Benchmark against LIBSVM and profiling (Exams week)
+						Benchmark against LIBSVM and profile performance (Exams week!)
 					</p>
 				</td>
 			</tr>
@@ -381,7 +381,7 @@
 				</td>
 				<td>
 					<p dir="ltr">
-						Stretch goals, Presentation and Write up (Finals Week)
+						Stretch goals, Presentation and Write up.
 					</p>
 				</td>
 			</tr>
