--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>DPSVM-LEGION</title>
+    <title>DPSVM</title>
   </head>
 
   <body>
