Add checkpoint link

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/thesiddharth/svm-legion">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/thesiddharth/dpsvm">View on GitHub</a>
 
           <h1 id="project_title">DPSVM</h1>
           <h2 id="project_tagline">Distributed Support Vector Machine training using OpenMPI and CUDA</h2>
 
+			<section> <h5>
+              <a href="https://github.com/thesiddharth/dpsvm/checkpoint.html"> Project Checkpoint </a>
+            </h5> </section>
+		  
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/thesiddharth/svm-legion/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/thesiddharth/svm-legion/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/thesiddharth/dpsvm/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/thesiddharth/dpsvm/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
