Fix checkpoint link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h2 id="project_tagline">Distributed Support Vector Machine training using OpenMPI and CUDA</h2>
 
 			<section> <h5>
-              <a href="https://github.com/thesiddharth/dpsvm/checkpoint.html"> Project Checkpoint </a>
+              <a href="http://thesiddharth.github.io/dpsvm/checkpoint.html"> Project Checkpoint </a>
             </h5> </section>
 		  
             <section id="downloads">
