--- a/proposal.html
+++ b/proposal.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Svm-legion : A distributed implementation of Support Vector Machines using OpenMPI and CUDA">
+    <meta name="description" content="DPSVM : A distributed implementation of Support Vector Machines using OpenMPI and CUDA">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>DPSVM</title>
+    <title>DPSVM - Proposal</title>
   </head>
 
   <body>
@@ -22,7 +22,7 @@
           <h2 id="project_tagline">Distributed Support Vector Machine training using OpenMPI and CUDA</h2>
 
 			<section> <h5>
-              <a href="http://thesiddharth.github.io/dpsvm/checkpoint.html"> Project Checkpoint </a>
+              <a href="http://thesiddharth.github.io/dpsvm/index.html"> Home </a>
             </h5> </section>
 		  
             <section id="downloads">
