--- a/checkpoint.html
+++ b/checkpoint.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Svm-legion : A distributed implementation of Support Vector Machines using OpenMPI and CUDA">
+    <meta name="description" content="DPSVM : A distributed implementation of Support Vector Machines using OpenMPI and CUDA">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Project Checkpoint</title>
+    <title>DPSVM - Checkpoint</title>
   </head>
 
   <body>
@@ -20,6 +20,10 @@
 
           <h1 id="project_title">DPSVM</h1>
           <h2 id="project_tagline">Project Checkpoint</h2>
+
+          	<section> <h5>
+              <a href="http://thesiddharth.github.io/dpsvm/index.html"> Home </a>
+            </h5> </section>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/thesiddharth/svm-legion/zipball/master">Download this project as a .zip file</a>
