added new images in index.html

--- a/index.html
+++ b/index.html
@@ -102,16 +102,22 @@
 	We have currently implemented a version, which distributes the training over multiple GPUs using OpenMPI. This version has been profiled with popular datasets such as <strong>MNIST</strong> and <strong>Forest Covertype</strong> (Asuncion &amp; Newman, 2007), which require a large no. of iterations to converge.
 </p>
 
-<p dir="ltr" class="centeredImage">
-	<img
-	src="images/mnist.png" width="556px;" height="401px;"/>
-</p>
+<div>
+	<img src="images/mnist_1.png" width="400px;" height="300px;"/>
+	<img src="images/covertype_1.png" width="400px;" height="300px;"/>
+</div>
 <br/>
 
-<p dir="ltr" class="centeredImage">
-	<img
-	src="images/covertype.png" width="556px;" height="401px;"/>
-</p>
+<div>
+	<img src="images/mnist_2.png" width="400px;" height="300px;"/>
+	<img src="images/covertype_2.png" width="400px;" height="300px;"/>
+</div>
+<br/> 
+
+<div>
+	<img src="images/mnist_3.png" width="400px;" height="300px;"/>
+	<img src="images/covertype_3.png" width="400px;" height="300px;"/>
+</div>
 <br/>    
 
   <h3>
